--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
+    "emailjs": "^4.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "tailwind-merge": "^1.10.0",
     "typescript": "5.0.2"
   },
