--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
-    "emailjs": "^4.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
     "tailwind-merge": "^1.10.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
